expected/main/lc/data-illegal-kind-annotations1.err
ERROR: "actual/main/lc/data-illegal-kind-annotations1.llc", line 3
  data T (a :: foo) = X | Y | Z
               ^
Unknown kind "foo"

ERROR: "actual/main/lc/data-illegal-kind-annotations1.llc", line 4
  data U ((a :: *) :: nat) = Nonsense
             ^
Multiple kinds (* and nat) have been specified for this type parameter

ERROR: Aborting after 2 previously reported errors

